update synchronized